--- a/CódigoFuente/BitacorasProduccion/Views/IT_wsus/LoadFile.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_wsus/LoadFile.cshtml
@@ -2,13 +2,12 @@
 @model Portal_2_0.Models.ExcelViewModel
 
 @{
-    ViewBag.Title = "Catálogo EPO";
+    ViewBag.Title = "Catálogo WSUS";
     ViewBag.PrimerNivel = "IT_epo_wsus";
     ViewBag.SegundoNivel = "IT_wsus";
     ViewBag.ControllerName = "IT_wsus";
 
 }
-
 
 
 <div class="right_col" role="main">
