--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresente.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresente.cshtml
@@ -607,7 +607,7 @@
                                                                                     string comentario = mes.HasValue ? @item.GetComentario(item.id_budget_rel_fy_centro, item.id_cuenta_sap, sum) : String.Empty;
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -645,7 +645,7 @@
                                                                                     string comentario = mes.HasValue ? @item.GetComentario(item.id_budget_rel_fy_centro, item.id_cuenta_sap, sum) : String.Empty;
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -683,7 +683,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -721,7 +721,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -759,7 +759,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -797,7 +797,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -834,7 +834,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -871,7 +871,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -908,7 +908,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -945,7 +945,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -982,7 +982,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -1019,7 +1019,7 @@
 
                                                                                     <div class="item form-group">
                                                                                         <span class="col-md-1">@(mes.HasValue?"$":string.Empty)</span>
-                                                                                        <span class="col-md-8">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
+                                                                                        <span class="col-md-8 cantidad" data-fila="@fila" data-columna="@sum">@string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", mes)</span>
                                                                                         <span class="col-md-3" style="color:blue; font-size:large" data-toggle="tooltip" title="@comentario">
                                                                                             @if (!String.IsNullOrEmpty(comentario))
                                                                                             {
@@ -1084,8 +1084,7 @@
                                                                         <td id="total_fila_columna" name="total_fila_columna" style="background-color: #d4f2fc" class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", valores_actual_forecast.Sum(item => item.TotalMeses()))</td>
                                                                         <td></td>
                                                                     </tr>
-                                                                </tbody>
-
+                                                                </tbody>                                                                
                                                             </table>
                                                             <input type="hidden" id="total_actual" name="total_actual" value="@sumaActual" />
 
@@ -1096,7 +1095,8 @@
                                                             @if (rel_presente.estatus)
                                                             {
                                                                 <div class="col-md-12 col-sm-12 offset-md-12">
-                                                                    <button type="submit" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i>&nbsp; Guardar</button>
+                                                                    <button type="button" onclick="enviaFormulario(); return;" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i>&nbsp; Guardar</button>
+                                                                    <button style="display:none" type="submit" id="submit-btn" ></button>
                                                                 </div>
                                                             }
                                                         </div>
@@ -1470,16 +1470,22 @@
                 }
             });
 
-            var tabla2 = $('#datatable_2').DataTable({
+            tabla2 = $('#datatable_2').DataTable({
                 "paging": false,
                 "ordering": false,
-                "searching": false,
+                //"searching": true,
                 "scrollX": true,
                 "scrollY": "600px",
                 "info": false,
                 fixedColumns: {
                     left: 4
                 },
+                'columnDefs': [     // see https://datatables.net/reference/option/columns.searchable
+                    {
+                        'searchable': false,
+                        'targets': [0,4,5,6,7,8,9,10,11,12,13,14,15,16,17]
+                    },
+                ]
             });
 
             var tabla3 = $('#datatable_3').DataTable({
@@ -1510,12 +1516,32 @@
 
         });
 
+        var tabla2;
 
+        function enviaFormulario() {
+            tabla2.search('');
+            tabla2.columns().search('').draw();
+            calculaTotal();
+            //envia el formulario con retraso
+            setTimeout(submit, 1500);
+        }
+
+        function submit() {
+            $('#submit-btn').click();
+        }
 
         function calculaFila(fila) {
             let sumaFila = 0;
             $("*[data-fila='" + fila + "']").each(function () {
-                sumaFila = sumaFila + ConvierteAFloat($(this).val(), 0)
+                
+                let valor = $(this).val();
+                if ($(this).val() == '') {
+                    valor = $(this).html().replace(',', '').replace(',', '');
+                }
+                
+
+                sumaFila = sumaFila + ConvierteAFloat(valor, 0)
+
             });
 
             sumaFila = sumaFila.toFixed(2);
@@ -1543,7 +1569,12 @@
             var suma = 0;
 
             $('.cantidad').each(function () {
-                suma = suma + ConvierteAFloat($(this).val(), 0)
+                let valor = $(this).val();
+                if ($(this).val() == '') {
+                    valor = $(this).html().replace(',', '').replace(',', '');
+                }
+
+                suma = suma + ConvierteAFloat(valor, 0)
             });
 
             suma = suma.toFixed(2);
@@ -1555,6 +1586,10 @@
 
             $("#total_fila_columna").html(total.toLocaleString('en-US', { style: 'currency', currency: 'USD', minimumFractionDigits: 2 }));
 
+            //actualiza el total de las columnas
+            for (let i = 1; i <= 12; i++) {
+                calculaColumna(i)
+            }
         }
 
         function ReiniciaTablaTimer() {
