--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroProximo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroProximo.cshtml
@@ -1207,9 +1207,10 @@
                                                         <div class="item form-group">
                                                             @if (rel_proximo.estatus)
                                                             {
-                                                                <div class="col-md-12 col-sm-12 offset-md-12">
-                                                                    <button type="submit" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i> &nbsp;Guardar</button>
-                                                                </div>
+                                                               <div class="col-md-12 col-sm-12 offset-md-12">
+                                                                   <button type="button" onclick="enviaFormulario(); return;" class="btn btn-success btn-lg float-lg-right"> <i class="fa-regular fa-floppy-disk"></i>&nbsp; Guardar</button>
+                                                                   <button style="display:none" type="submit" id="submit-btn"></button>
+                                                               </div>
                                                             }
                                                         </div>
                                                     </div>
@@ -1273,16 +1274,22 @@
                 },
             });
 
-            var tabla3 = $('#datatable_3').DataTable({
+            tabla3 = $('#datatable_3').DataTable({
                 "paging": false,
                 "ordering": false,
-                "searching": false,
+                "searching": true,
                 "scrollX": true,
                 "scrollY": "600px",
                 "info": false,
                 fixedColumns: {
                     left: 4
-                }
+                },
+                'columnDefs': [     // see https://datatables.net/reference/option/columns.searchable
+                    {
+                        'searchable': false,
+                        'targets': [0, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
+                    },
+                ]
             });
 
             //Agrega el evento a todos los input
@@ -1295,13 +1302,25 @@
 
                 });
             });
-
+                      
 
             $.unblockUI();
 
         });
 
+        var tabla3;
 
+        function enviaFormulario() {
+            tabla3.search('');
+            tabla3.columns().search('').draw();
+            calculaTotal();
+            //envia el formulario con retraso
+            setTimeout(submit, 1500);
+        }
+
+        function submit() {
+            $('#submit-btn').click();
+        }
 
         function calculaFila(fila) {
             let sumaFila = 0;
@@ -1345,6 +1364,11 @@
             let total = parseFloat(total_actual) + parseFloat(suma);
 
             $("#total_fila_columna").html(total.toLocaleString('en-US', { style: 'currency', currency: 'USD', minimumFractionDigits: 2 }));
+
+            //actualiza el total de las columnas
+            for (let i = 1; i <= 12; i++) {
+                calculaColumna(i)
+            }
 
         }
 
